feat: improve temperature control strategies
Signed-off-by: Ivan Li <ivanli2048@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ ryu = "1.0.18"
 static_cell = "2.1.0"
 
 gx21m15 = { features = ["async"], version = "0.1.0" }
-husb238 = { path = "../husb238-rs", features = ["async", "defmt"] }
+husb238 = { version = "0.1.1", features = ["async", "defmt"] }
 sgm41511 = { path = "../sgm41511-rs", features = ["async", "defmt"] }
 
 # cargo build/run
